<resources>
    <string name="feature_detail">detail</string>
    <string name="share_button">Bookmark Movie</string>
    <string name="ex_movie_title">Spiderman: No Way Home</string>
    <string name="thumbnail_trailer_videos">thumbnail trailer videos</string>
    <string name="cast_movie_detail">&#10024; Cast</string>
    <string name="similar_to_this">🧭 Similar to this</string>
    <string name="runtime_movie_detail">"%s Hr %s Min"</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="back_button">back_button</string>
    <string name="tv_similar_movie_empty_state">Sorry, there is no similar movie</string>
    <string name="tv_cast_empty_state">"Sorry, there is no cast "</string>
    <string name="poster_movie">movie poster image</string>
    <string name="tv_see_all_cast">See all</string>
    <string name="tv_information_header">Information</string>
    <string name="tv_information_subheader">Release Information</string>
    <string name="tv_original_title">Original Title</string>
    <string name="tv_status">Status</string>
    <string name="tv_release_date">Release Date</string>
    <string name="tv_runtime">Runtime</string>
    <string name="tv_original_language">Original Language</string>
    <string name="tv_production_countries">Production Countries</string>
    <string name="tv_budget">Budget</string>
    <string name="tv_revenue">Revenue</string>
    <string name="tv_companies">Companies</string>
    <string name="title_activity_fullscreen_you_tube_player">FullscreenYouTubePlayerActivity
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>